# agni-modern-aaai

./: .gitignore  Makefile  README.md  pyproject.toml
configs/data/: base.yaml  kalimantan.yaml  national.yaml  sumatra.yaml
configs/experiments/: kalimantan_micro.yaml  kalimantan_pilot.yaml  kalimantan_regional.yaml  national_aaai.yaml
configs/models/: logreg.yaml  random_forest.yaml  transformer.yaml  xgboost.yaml
docs/: counterfactual_formulation.md  feature_catalog.md  setup_comparison.md
experiments/: ablation_contributions.py  conformal_risk_experiment.py  feature_expansion_ablation.py  joint_risk_experiment.py  leakage_curve_experiment.py  lookback_ablation.py  model_comparison.py  propensity_severity_experiment.py  render_paper_tables.py  severity_evaluation.py  spatial_block_cv.py
hpc/: README.md  build_array.slurm  build_login.sh  check_env.sh  experiments.txt  experiments_array.slurm  merge.slurm  setup_env_drac.sh  train.slurm
scripts/: build_dataset.py  build_grid.py  build_labels.py  enrich_features.py  evaluate.py  plot_results.py  run_experiment.py  train.py
src/agni/: __init__.py  config.py  experiment_utils.py  pipeline.py
src/agni/data/: builder.py  (+3 more)
tests/: test_config.py  test_conformal.py  test_counterfactual.py  test_data_builder.py  test_evaluation.py  test_experiment_entrypoints.py  test_features.py  test_guard.py  test_joint_risk.py  test_labels_materialize.py  test_leakage_taxonomy.py  test_model_comparison.py  test_models.py  test_pipeline.py  test_propensity.py  test_runners.py  test_sources.py  test_splits.py  test_synthetic.py
(+48 files in other folders)
