[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agni-v2"
version = "0.1.0"
description = "Research-grade wildfire occurrence and severity forecasting framework"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Anonymous" }]
dependencies = [
    "click==8.1.7",
    "earthengine-api==0.1.414",
    "geopandas==0.14.4",
    "matplotlib==3.9.1",
    "numpy==1.26.4",
    "osmnx==1.9.4",
    "pandas==2.2.2",
    "pyarrow==16.1.0",
    "pydantic==2.8.2",
    "pyyaml==6.0.2",
    "rasterio==1.3.10",
    "scikit-learn==1.5.1",
    "scipy==1.14.0",
    "shap==0.46.0",
    "shapely==2.0.5",
    "torch==2.4.0",
    "typer==0.12.3",
    "xgboost==2.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "ruff==0.5.4",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["agni"]
